mainimg css collapse solved

--- a/src/components/MainSlider.css
+++ b/src/components/MainSlider.css
@@ -1,4 +1,4 @@
-.banner img {
+.mainbanner img {
   width: 100%;
 }
 .container {
